# python-fastapi

./: .env.local  .python-version  LICENSE  README.md
python-fastapi/: .env.local  .isort.cfg  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
python-fastapi/app/: main.py
python-fastapi/app/adapters/api/: book.py
python-fastapi/app/adapters/entrypoints/http/: fastapi_router.py
python-fastapi/app/adapters/entrypoints/http/v1/: book.py  book_dto.py  book_router.py  settings_router.py
python-fastapi/app/adapters/entrypoints/rest/v1/: book.py  settings.py
python-fastapi/app/adapters/entrypoints/v1/: book.py
python-fastapi/app/adapters/repositories/: book.py  book_repository.py
python-fastapi/app/configs/: depency_injection.py  settins.py
python-fastapi/app/domain/models/: book.py  book_model.py  models.py
python-fastapi/app/domain/ports/: book.py  book_ports.py
python-fastapi/app/infrastructure/: depency_injection.py  fastapi_router.py  http.py  settins.py
python-fastapi/infrastructure/alembic/migrations/: env.py
python-fastapi/infrastructure/alembic/migrations/versions/: 9611f57822a8_update_book_table_to_adding_author_s_.py  d56aa514de5f_create_book_table.py
python-fastapi/tests/integrated/adapters/api/: test_book.py
python-fastapi/tests/integrated/adapters/repositories/: conftest.py  test_book_repository.py
